2003-12-10  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-folder-cache.c (real_flush_updates): Update the unread
	count in the model if the folder got new mail.

	* em-folder-selection.c (em_select_folder): Updated.

	* em-folder-selection-button.c
	(em_folder_selection_button_clicked): Updated.

	* em-folder-tree-model.c (em_folder_tree_model_set_unread_count):
	New function to update the unread count for a folder.

	* mail-component.c (mail_component_peek_tree_model): Don't ref the
	model. Also renamed s/get/peek/

2003-12-10  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_multipart_signed):
	* em-format-html.c (efh_multipart_signed): 
	* em-format.c (emf_multipart_signed): treat
	application/pkcs7-signature as application/x-pkcs-signature.
	Stupud non-rfc-compliant mailers from apple.  Bug #51750.

	* em-folder-selection.c (em_select_folder): rewritten to get rid
	of hte old crap that should've been gotten rid of before.  Bug
	#51602.
	(em_folder_selection_run_dialog_uri): removed.
	(em_folder_selection_run_dialog): removed.  this file is gutted
	and should probably be removed.

	* em-folder-selector.h: use a POSITIVE value for the response
	value, gtk uses -ative ones.  Bug #51752.

	* Makefile.am (INCLUDES): added smime/lib and smime/gui to
	includes.

	* em-folder-tree.c (emft_popup_rename_folder): removed unused 'why',
	why not?

	* em-format-html-display.c (efhd_xpkcs7mime_validity_clicked):
	setup a table of buttons to view any certs we have.

	* em-folder-browser.c (emfb_activate): separeate view_menu
	unreffing from view_instance.  fixes a runtime warning.

	** See bug #51718.

	* mail-component.c (em_uri_to_camel): handle an e-uri which has an
	account uid which isn't in user@host format.

2003-12-09  Not Zed  <NotZed@Ximian.com>

	** See bug #51899.

	* em-folder-tree-model.c (em_folder_tree_model_set_folder_info):
	CAMEL_FOLDER_CHILDREN is only advisory, some servers don't give it
	to you.

2003-12-06  JP Rosevear <jpr@ximian.com>
